# mkfat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: args.h  bootsector.h  common.h  diskimage.h  error.h  fatdata.h  fatentry.h  fatformat.h  fattable.h  fattype.h  filetree.h  fsinfo.h  logging.h  reserved.h  treeitem.h  writeable.h
src/: args.cpp  bootsector.cpp  common.cpp  common.h  diskimage.cpp  error.cpp  fatdata.cpp  fatdata.h  fatentry.cpp  fatentry.h  fatformat.cpp  fatformat.h  fattable.cpp  fattable.h  fattable12.cpp  fattable16.cpp  fattable32.cpp  filetree.cpp  filetree.h  logging.cpp  main.cpp  reserved.cpp  reserved.h  treeitem.cpp
